test: implement new unit tests and enhace existing test coverage