@@ -43,13 +43,13 @@
         <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-core</artifactId>
-          <version>5.11.0</version> 
+          <version>5.15.2</version> 
           <scope>test</scope>
         </dependency>
         <dependency>
           <groupId>org.mockito</groupId>
           <artifactId>mockito-junit-jupiter</artifactId>
-          <version>5.11.0</version>
+          <version>5.15.2</version>
           <scope>test</scope>
         </dependency>
         <dependency>
@@ -135,6 +135,9 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.5.2</version>
+          <configuration>
+            <argLine>@{argLine} -Dnet.bytebuddy.experimental=true</argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
